--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ phases:
   build:
     commands:
       # Use AWS SAM to package the application by using AWS CloudFormation
-      - sam package --template template.yml --s3-bucket sam-app-samsoft --output-template template-export.yml
+      - sam package --template-file template.yml --s3-bucket sam-app-samsoft --output-template-file template-export.yml
       - sam deploy --template-file package.yml --stack-name samnext --capabilities CAPABILITY_IAM
 artifacts:
   type: zip
