--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,9 +15,9 @@ phases:
   build:
     commands:
       # Use AWS SAM to package the application by using AWS CloudFormation
-      - sam package --template-file template.yml --s3-bucket sam-app-samsoft --output-template-file template-export.yml
+      - sam package --template-file template.yml --s3-bucket sam-app-samsoft --output-template-file packaged.yaml.yml
       - sam deploy --template-file package.yml --stack-name samnext --capabilities CAPABILITY_IAM
 artifacts:
   type: zip
   files:
-    - template-export.yml
+    - packaged.yaml.yml
