--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,7 +16,7 @@ phases:
     commands:
       # Use AWS SAM to package the application by using AWS CloudFormation
       - sam package --template-file template.yml --s3-bucket sam-app-samsoft --output-template-file packaged.yml
-      - sam deploy --template-file /codebuild/output/src905958439/src/packaged.yml --stack-name samnext --capabilities CAPABILITY_IAM
+      - sam deploy --template-file ./packaged.yml --stack-name samnext --capabilities CAPABILITY_IAM
 artifacts:
   type: zip
   files:
