--- a/template.yml
+++ b/template.yml
@@ -74,6 +74,28 @@ Resources:
   putItemFunction:
     Type: AWS::Serverless::Function
     Properties:
+      Handler: src/handlers/signup.signUpFunction
+      Runtime: nodejs12.x
+      MemorySize: 128
+      Timeout: 100
+      Description: A user registration api includes a HTTP post method to add one item to a DynamoDB table.
+      Policies:
+        # Give Create/Read/Update/Delete Permissions to the SampleTable
+        - DynamoDBCrudPolicy:
+            TableName: !Ref profile
+      Environment:
+        Variables:
+          # Make table name accessible as environment variable from function code during execution
+          SAMPLE_TABLE: !Ref profile
+      Events:
+        Api:
+          Type: Api
+          Properties:
+            Path: /register
+            Method: POST
+  putItemFunction:
+    Type: AWS::Serverless::Function
+    Properties:
       Handler: src/handlers/put-item.putItemHandler
       Runtime: nodejs12.x
       MemorySize: 128
@@ -106,7 +128,15 @@ Resources:
       ProvisionedThroughput:
         ReadCapacityUnits: 2
         WriteCapacityUnits: 2
-
+  profile:
+    Type: AWS::Serverless::profileTable
+    Properties:
+      PrimaryKey:
+        Name: email
+        Type: String
+      ProvisionedThroughput:
+        ReadCapacityUnits: 2
+        WriteCapacityUnits: 2
 Outputs:
   WebEndpoint:
     Description: "API Gateway endpoint URL for Prod stage"
