--- a/template.yml
+++ b/template.yml
@@ -71,7 +71,7 @@ Resources:
   # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
 
   # This is a Lambda function config associated with the source code: put-item.js
-  putItemFunction:
+  RegistrationFunction:
     Type: AWS::Serverless::Function
     Properties:
       Handler: src/handlers/signup.signUpFunction
