--- a/template.yml
+++ b/template.yml
@@ -81,12 +81,8 @@ Resources:
       Description: A user registration api includes a HTTP post method to add one item to a DynamoDB table.
       Policies:
         # Give Create/Read/Update/Delete Permissions to the SampleTable
-        - DynamoDBCrudPolicy:
-            TableName: !Ref ProfileTable
-      Environment:
-        Variables:
-          # Make table name accessible as environment variable from function code during execution
-          SAMPLE_TABLE: !Ref ProfileTable
+        #- DynamoDBCrudPolicy:
+        #    TableName: !Ref ProfileTable
       Events:
         Api:
           Type: Api
