--- a/template.yml
+++ b/template.yml
@@ -79,10 +79,10 @@ Resources:
       MemorySize: 128
       Timeout: 100
       Description: A user registration api includes a HTTP post method to add one item to a DynamoDB table.
-      Policies:
-        # Give Create/Read/Update/Delete Permissions to the SampleTable
-        - DynamoDBCrudPolicy:
-            TableName: ProfileTable
+      # Policies:
+      #   # Give Create/Read/Update/Delete Permissions to the SampleTable
+      #   - DynamoDBCrudPolicy:
+      #       TableName: ProfileTable
       Events:
         Api:
           Type: Api
