--- a/template.yml
+++ b/template.yml
@@ -79,10 +79,10 @@ Resources:
       MemorySize: 128
       Timeout: 100
       Description: A user registration api includes a HTTP post method to add one item to a DynamoDB table.
-      # Policies:
-      #   # Give Create/Read/Update/Delete Permissions to the SampleTable
-      #   - DynamoDBCrudPolicy:
-      #       TableName: ProfileTable
+      Policies:
+        # Give Create/Read/Update/Delete Permissions to the SampleTable
+        - DynamoDBCrudPolicy:
+            TableName: ProfileTable
       Events:
         Api:
           Type: Api
@@ -112,6 +112,15 @@ Resources:
     Properties:
       PrimaryKey:
         Name: id
+        Type: String
+      ProvisionedThroughput:
+        ReadCapacityUnits: 2
+        WriteCapacityUnits: 2
+  ProfileTable:
+    Type: AWS::Serverless::SimpleTable
+    Properties:
+      PrimaryKey:
+        Name: email
         Type: String
       ProvisionedThroughput:
         ReadCapacityUnits: 2
